--- a/Coffee clicker/.classpath
+++ b/Coffee clicker/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry excluding="res/" kind="src" path="src"/>
 	<classpathentry excluding="src/|src/res/" kind="src" path=""/>
 	<classpathentry kind="src" path="src/res"/>
+	<classpathentry kind="lib" path="src/com/dockdev/clickers/coffee/GJAPI.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
